--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.7",
+    "js-cookie": "^2.2.1",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
