Add components for main page

--- a/nextjs/.eslintrc.json
+++ b/nextjs/.eslintrc.json
@@ -20,6 +20,8 @@
     ],
     "rules": {
         "require-jsdoc": "off",
-        "react/no-unescaped-entities": "off"
+        "react/no-unescaped-entities": "off",
+        "react/prop-types": "off",
+        "linebreak-style": "off"
     }
 }
