--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "clsx": "^1.1.1",
     "firebase": "^8.2.7",
     "js-cookie": "^2.2.1",
     "next": "10.0.6",
